--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "browserify": "17.0.0",
     "del": "6.1.1",
     "eslint": "7.32.0",
+    "eslint-config-htmlacademy": "^9.1.1",
     "gh-pages": "^5.0.0",
     "gulp": "4.0.2",
     "gulp-concat": "2.6.1",
